--- a/pom.xml
+++ b/pom.xml
@@ -39,13 +39,13 @@
 	</dependencies>
 	<distributionManagement>
 		 <snapshotRepository>
-		    <id>nexus</id>
-		    <url>http://172.31.15.236:8081/repository/maven-snapshots/</url>
+		    <id>nexusRepo</id>
+		    <url>http://13.50.244.100:8081/repository/roja/</url>
 		 </snapshotRepository>
 		
 		<repository>
-		    <id>nexus</id>
-		    <url>http://172.31.15.236:8081/repository/maven-releases/</url>
+		    <id>nexusRepo</id>
+		    <url>http://13.50.244.100:8081/repository/roja/</url>
 		</repository>
   	</distributionManagement>
 	
